# juliet-test-suite-c

./: CMakeLists.txt  LICENSE  README.md  create_cmakelists.py  create_per_cwe_files.py  juliet-run.sh  juliet.py  parse-cwe-status.py  py_common.py  run_analysis_example_tool.py  update_main_cpp_and_testcases_h.py
testcases/CWE114_Process_Control/: CWE114_Process_Control__w32_char_listen_socket_33.cpp  CWE114_Process_Control__w32_char_listen_socket_43.cpp  CWE114_Process_Control__w32_char_listen_socket_62b.cpp  CWE114_Process_Control__w32_char_listen_socket_72a.cpp  CWE114_Process_Control__w32_char_listen_socket_73a.cpp  CWE114_Process_Control__w32_char_listen_socket_74a.cpp  CWE114_Process_Control__w32_char_listen_socket_81a.cpp  CWE114_Process_Control__w32_char_listen_socket_82a.cpp  CWE114_Process_Control__w32_char_listen_socket_83_bad.cpp  CWE114_Process_Control__w32_char_listen_socket_84_bad.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_33.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_43.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_62b.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_72a.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_73a.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_74a.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_81a.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_82a.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_83_bad.cpp  CWE114_Process_Control__w32_wchar_t_listen_socket_84_bad.cpp
testcases/CWE123_Write_What_Where_Condition/: CWE123_Write_What_Where_Condition__listen_socket_33.cpp  CWE123_Write_What_Where_Condition__listen_socket_43.cpp  CWE123_Write_What_Where_Condition__listen_socket_62b.cpp  CWE123_Write_What_Where_Condition__listen_socket_72a.cpp  CWE123_Write_What_Where_Condition__listen_socket_73a.cpp  CWE123_Write_What_Where_Condition__listen_socket_74a.cpp  CWE123_Write_What_Where_Condition__listen_socket_81a.cpp  CWE123_Write_What_Where_Condition__listen_socket_82a.cpp  CWE123_Write_What_Where_Condition__listen_socket_83_bad.cpp  CWE123_Write_What_Where_Condition__listen_socket_84_bad.cpp
testcases/CWE15_External_Control_of_System_or_Configuration_Setting/: CWE15_External_Control_of_System_or_Configuration_Setting__w32_33.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_43.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_62b.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_72a.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_73a.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_74a.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_81a.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_82a.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_83_bad.cpp  CWE15_External_Control_of_System_or_Configuration_Setting__w32_84_bad.cpp
testcases/CWE319_Cleartext_Tx_Sensitive_Info/: CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_33.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_43.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_62b.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_72a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_73a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_74a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_81a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_82a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_83_bad.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_83_goodB2G.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_84_bad.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_char_listen_socket_84_goodB2G.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_33.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_43.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_62b.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_72a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_73a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_74a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_81a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_82a.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_83_bad.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_83_goodB2G.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_84_bad.cpp  CWE319_Cleartext_Tx_Sensitive_Info__w32_wchar_t_listen_socket_84_goodB2G.cpp
testcases/CWE427_Uncontrolled_Search_Path_Element/: CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_33.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_43.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_62b.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_72a.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_73a.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_74a.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_81a.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_82a.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_83_bad.cpp  CWE427_Uncontrolled_Search_Path_Element__char_listen_socket_84_bad.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_33.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_43.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_62b.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_72a.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_73a.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_74a.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_81a.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_82a.cpp  CWE427_Uncontrolled_Search_Path_Element__wchar_t_listen_socket_83_bad.cpp  (+1 more)
(+2048 files in other folders)
